Update to advertise cap fields with standard name, units, and state name. Improved log information. Updated Doxygen documentation. Updated README. Updated driver and model attributes.

--- a/NUOPC/team/danrosen25/Proto/SampleCapProto/qsub.sample
+++ b/NUOPC/team/danrosen25/Proto/SampleCapProto/qsub.sample
@@ -1,17 +1,25 @@
 #! /bin/ksh --login
 
+###########################################################################
+# Modify PBSACCOUNT, QUEUE, NCPUS and APP_LAUNCER depending on system and #
+# project.                                                                #
+###########################################################################
+
 #PBS -e err
 #PBS -o out
 #PBS -N SampleApp
-#PBS -A 
-#PBS -q debug
-#PBS -l select=1:ncpus=24
+#PBS -A PBSACCOUNT
+#PBS -q QUEUE
+#PBS -l select=1:ncpus=NCPUS
 #PBS -l walltime=00:30:00
 #PBS -W umask=027
 
 cd $PBS_O_WORKDIR
 
 set -x
+
+# Enable ESMF Compliance Checker
+# export ESMF_RUNTIME_COMPLIANCECHECK=ON
 
 # Enable Fortran RTL core dumps for severe run time failures
 # export decfort_dump_flag=y
@@ -24,7 +32,7 @@ ulimit -d unlimited #datasize
 ulimit -m unlimited #memoryuse
 
 echo "Model started:  " `date`
-aprun -n 24 ./sample_app.exe
+APP_LAUNCHER -n 24 ./sample_app.exe
 echo "Model ended:    " `date`
 
 exit
